Modify Student to hold lesson codes and prices